0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/d_plotting/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting:

.. _examples-plotting-index:

Plotting datasets
-----------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Using plot_multiple to plot several datasets on the same figure">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/thumb/sphx_glr_plot_plot_multiple_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plot_multiple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using plot_multiple to plot several datasets on the same figure</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to the plotting librairie">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/thumb/sphx_glr_plot_plotting_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Introduction to the plotting librairie</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plot_multiple
   /gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plotting

